# p1

./: CLAUDE.md  README.md  fibonacci.cpp  payment.py  review.md  test.cpp
CMake/cmaketools/: CMakeLists.txt  main.cc
CMake/helloworld/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
claude-agent-demo/: bad_code.py  login.py
claude-agent-demo/.claude/agents/: code-review-tester.md  roast-master.md
docu/: AutoBot.md  databaseCase.md  git.md  moderncpp.md  mongodb.md  mysql.md  redis.md
leetcode/: 2602.cpp  2603.cc  2604.cc  2605.py  2606.cc  2607.cc  UndirectedGraph .cc  add.cpp  doubleList.cc  graphAdjList.cc  mylist.cc  test.cpp  test1.py
leetcode/docker/: Dockerfile  main.py
leetcode/go/: data.go  file.go  func.go  goroutine.go  hello.go  interface.go  panic_recover.go  reflect.go  struct.go  sync.go  xx.txt
minesweeper/: CLAUDE.md  CMakeLists.txt
minesweeper/src/: database.cpp  database.h  main.cpp
minesweeper/static/: index.html  script.js  style.css
protobuffer/: protobuf.md
protobuffer/test1/: contacts.pb.cc  contacts.pb.h  contacts.proto  main.cc
protobuffer/test2/: contacts.pb.cc  contacts.pb.h  contacts.proto  makefile  read  read.cc  write  write.cc
protobuffer/test3/: contacts.proto  testDefult.proto  testany.pb.cc  testany.pb.h  testany.proto  testenum.proto  testenum2.pb.cc  testenum2.pb.h  testenum2.proto
review/: constexpr.cc  cpp14.cc  cpp17.cc  entrust.cc  gtest.cc  makefile  regex.cc  static_assert.cc  tuple.cc  typeInference.cc  udl.cc
